k8s/nextjs-deployment.yaml
# k8s/nextjs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs
  namespace: secret-h
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nextjs
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      containers:
        - name: nextjs
          image: shakenbake89/secret-h-next:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: nextjs
  namespace: secret-h
spec:
  selector:
    app: nextjs
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
