k8s/socket-deployment.yaml
# k8s/socket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socket
  namespace: secret-h
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socket
  template:
    metadata:
      labels:
        app: socket
    spec:
      containers:
        - name: socket
          image: shakenbake89/secret-h-socket:latest
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: socket
  namespace: secret-h
spec:
  selector:
    app: socket
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
