k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secret-h-ingress
  namespace: secret-h
  annotations:
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/enable-websocket: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: socket
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextjs
                port:
                  number: 80
